Truncated all cells, using new font and playlist table layout fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,8 @@ $purple-font: #34314c;
 
 $nav-height: 3em;
 
+@font-face {font-family: "Circular Medium"; src: url("//db.onlinewebfonts.com/t/3d85dc16e94da9358d451666fdbc3398.eot"); src: url("//db.onlinewebfonts.com/t/3d85dc16e94da9358d451666fdbc3398.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3d85dc16e94da9358d451666fdbc3398.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3d85dc16e94da9358d451666fdbc3398.woff") format("woff"), url("//db.onlinewebfonts.com/t/3d85dc16e94da9358d451666fdbc3398.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3d85dc16e94da9358d451666fdbc3398.svg#Circular Medium") format("svg"); } 
+
 nav {
   height: $nav-height;
 }
