--- a/src/stylesheets/playlists.scss
+++ b/src/stylesheets/playlists.scss
@@ -19,16 +19,22 @@ table {
   background-color: black;
   color: whitesmoke;
   font-weight: bold;
+  font-family: "Circular Medium";
 
   th {
     color: rgb(30, 215, 97);
-    // padding: 0;
+    padding: 10px;
+    font-weight: lighter;
   }
 
   tr {
     border-top: solid 1px rgba(230, 228, 228, 0.269);
     height: 3em;
-    // padding: 1%;
+    padding: 1em;
+  }
+
+  td {
+    padding: 1em;
   }
 
   .add {
@@ -45,12 +51,13 @@ table {
 
 .search-table {
   height: 50em;
-  width: 50em;
+  width: 45em;
   text-align: left;
-  border-spacing:10px;
+  border-spacing: 10px;
+  margin-left: 1em;
+  border: none;
 
-  .search-body {
-    padding: 10px;
+  tbody {
   }
 }
 
@@ -60,7 +67,6 @@ table {
   right: 0px;
   height: 100vh;
   overflow-y: auto;
-
 
   td {
     display: flex;
